<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myhang.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">



        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textColor="#ff0800"
            android:textSize="56sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/game8"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player1"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/player1NameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_player1_name"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:inputType="textCapCharacters" />


        <EditText
            android:id="@+id/secretWordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_secret_word"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:inputType="textCapCharacters" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/player2NameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_player2_name"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:inputType="textCapCharacters" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/start_game" />

        <Button
            android:id="@+id/showResultsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_results"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
